# create-tauri-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENTS.md  LICENSE  LICENSE.spdx  README.md  create-tauri-app.sh  package.json  pnpm-workspace.yaml  renovate.json
.cargo/: config.toml
.changes/: config.json
.github/: dependabot.yml
.github/workflows/: Cloudflare.yml  Dependabot.yml  NPM.yml  Node.yml  Rust.yml
.scripts/: generate-templates-matrix.js  sync-scripts-tagname.js
Documentation/: index.html
Source/: args.rs  category.rs  deps.rs  lib.rs  main.rs  manifest.rs  package_manager.rs  template.rs
Source/utils/: colors.rs  dialoguer_theme.rs  lte.rs  mod.rs  theme.rs
node/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  create-tauri-app.js  index.d.ts  index.js  package.json
node/Documentation/: index.html  modules.html
node/Source/: lib.rs
src/: deps.rs
templates/template-angular/: README.md
templates/template-dioxus/: README.md
templates/template-leptos/: README.md
templates/template-preact/: README.md
templates/template-preact-ts/: README.md
templates/template-react/: README.md
templates/template-solid/: README.md
templates/template-svelte/: README.md  svelte.config.js
templates/template-sycamore/: README.md
templates/template-vanilla/: README.md
templates/template-vue/: README.md
templates/template-vue-ts/: README.md
templates/template-yew/: README.md
worker/: index.html  index.js  package.json  wrangler.toml
worker/Documentation/: index.html  modules.html
(+49 files in other folders)
