[package]
name = "create-tauri-app"
description = "Rapidly scaffold out a new tauri app project."
authors = ["Tauri Programme within The Commons Conservancy"]
version = "4.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/create-tauri-app"
keywords = ["tauri"]
categories = ["gui"]
exclude = ["node", "worker", ".github", ".changes", ".scripts"]
rust-version = "1.61"

[[bin]]
name = "cargo-create-tauri-app"
path = "src/main.rs"

[workspace]
resolver = "2"
members = ["node"]

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
dialoguer = "0.10"
pico-args = "0.5"
ctrlc = "3.3"
rust-embed = { version = "8.3", features = [
	"compression",
	"interpolate-folder-path",
] }
